--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Кодировка страницы -->
 	<meta charset="UTF-8">
 	<!-- Заголовок страницы в браузере -->
-	<title>NAME</title>
+	<title>XHR + Fetch</title>
 	<!-- Подключение CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Адаптив -->
@@ -18,8 +18,7 @@
 	<!-- HEADER -->
 	<!-- MAIN -->
 	<!-- FOOTER -->
-	<script src="js/scrypt.js"></script>
-	<script src="js/xhr.js"></script>
+	<script src="js/fetch.js"></script>
 </body>
 
 </html>
